--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 body {
     color: #d3d3d3;
     font-family: "Open Sans";
-    font-weight: 700;
+    font-weight: 400;
 }
 
 h1,
@@ -15,4 +15,19 @@ h1,
 
 .bg-light-gray {
     background-color: #d3d3d3;
+}
+
+.btn-gray,
+.btn-gray:hover {
+    background-color: #d3d3d3;
+    color: #c32625;
+    border-color: #c32625;
+}
+
+.btn-gray:active,
+.btn-gray:focus {
+    background-color: #d4d4d4;
+    color: #c32625;
+    border-color: #c42726;
+    box-shadow: none;
 }
